Fixes sticky :hover on mobile; Adds :active on css

--- a/public/index.css
+++ b/public/index.css
@@ -41,9 +41,6 @@ h1 {
   padding: 12px 16px;
   text-decoration: none;
 }
-#navbar li a:hover {
-  background-color: rgba(255, 255, 255, 0.582);
-}
 
 
 #buttons {
@@ -61,9 +58,6 @@ h1 {
 
 a{
   text-decoration: none;
-}
-a li:hover{
-  -webkit-text-stroke: 0.3px white;
 }
 
 .twitter-tweet{
@@ -103,23 +97,11 @@ p{
   margin: 5px;
   border: 0.5px solid #d3d3d3;
 }
-.control:hover {
-  background-color: #00aced;
-  cursor: pointer;
-  color: white;
-}
-
 
 .disable{
   color: #d3d3d3;
 }
-.disable:hover{
-  color: #d3d3d3;
-  background-color: white;
-  cursor: default;
-  -webkit-text-stroke: 0px white;
-  border: 0.5px solid #d3d3d3;
-}
+
 
 .hide{
   display: none;
@@ -137,6 +119,46 @@ p{
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
+}
+
+#navbar li a:active {
+  background-color: rgba(255, 255, 255, 0.582);
+}
+a li:active{
+  -webkit-text-stroke: 0.3px white;
+}
+.control:active {
+  background-color: #00aced;
+  cursor: pointer;
+  color: white;
+}
+.disable:active{
+  color: #d3d3d3;
+  background-color: white;
+  cursor: default;
+  -webkit-text-stroke: 0px white;
+  border: 0.5px solid #d3d3d3;
+}
+
+@media (hover: hover) {
+  #navbar li a:hover {
+    background-color: rgba(255, 255, 255, 0.582);
+  }
+  a li:hover{
+    -webkit-text-stroke: 0.3px white;
+  }
+  .control:hover {
+    background-color: #00aced;
+    cursor: pointer;
+    color: white;
+  }
+  .disable:hover{
+    color: #d3d3d3;
+    background-color: white;
+    cursor: default;
+    -webkit-text-stroke: 0px white;
+    border: 0.5px solid #d3d3d3;
+  }
 }
 
 
